add docker compose

--- a/.env-template
+++ b/.env-template
@@ -1,1 +1,13 @@
 TELEGRAM_TOKEN = PASTE_TOKEN_HERE
+
+POSTGRES_DB = PASTE_YOUR_DB
+POSTGRES_USER = PASTE_YOUR_USER
+POSTGRES_PASSWORD = PASTE_YOUR_PASSWORD 
+
+DB_HOST = PASTE_YOUR_HOST
+DB_PORT = PASTE_YOUR_PORT
+SQLITE_TURN = IF_U_NEED_POSTGRES_PASTE_FALSE
+
+DEBUG_STATUS = True
+ALLOWED_HOSTS = PASTE_YOUR_ALLOWED_HOSTS
+SECRET_KEY = PASTE_YOUR_SECRET_KEY_FROM_SETTINGS
