--- a/wish_list/requirements.txt
+++ b/wish_list/requirements.txt
@@ -3,6 +3,5 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==4.7.2
 django-filter==23.1
 dotenv
-Pillow==9.4.0
-PyTelegramBotAPI
-requests==2.28.2
+gunicorn==20.1.0 
+psycopg2
