--- a/.env-template
+++ b/.env-template
@@ -9,5 +9,5 @@ DB_PORT = PASTE_YOUR_PORT
 SQLITE_TURN = IF_U_NEED_POSTGRES_PASTE_FALSE
 
 DEBUG_STATUS = True
-ALLOWED_HOSTS = PASTE_YOUR_ALLOWED_HOSTS
+ALLOWED_HOSTS =127.0.0.1, localhost, api-backend 
 SECRET_KEY = PASTE_YOUR_SECRET_KEY_FROM_SETTINGS
